--- a/_rmd/2016-10-02-My-first-post.Rmd
+++ b/_rmd/2016-10-02-My-first-post.Rmd
@@ -3,9 +3,9 @@ layout: post
 title: My first post
 author: Peter Laurinec
 published: false
-status: process
+status: processed
 draft: false
-tags: R
+tags: test
 ---
 
 ## Data Analysis
