--- a/_rmd/2016-11-12-Forecast-electricity-consumption-with-similar-day-approach-in-R.Rmd
+++ b/_rmd/2016-11-12-Forecast-electricity-consumption-with-similar-day-approach-in-R.Rmd
@@ -3,7 +3,7 @@ layout: post
 title: Enernoc smart meter data - forecast electricity consumption with similar day approach in R
 author: Peter Laurinec
 published: false
-status: process
+status: processed
 draft: false
 tags: R forecast
 ---
