testing new post

--- a/_rmd/2016-11-16-Forecast-double-seasonal-time-series-with-multiple-linear-regression-in-R.Rmd
+++ b/_rmd/2016-11-16-Forecast-double-seasonal-time-series-with-multiple-linear-regression-in-R.Rmd
@@ -1,10 +1,11 @@
 ---
+layout: post
 title: "Forecast double seasonal time series with multiple linear regression in R"
-author: Peter Laurinec
+author: "Peter Laurinec"
 published: false
 status: process
+tags: test
 draft: false
-tags: R forecast
 ---
 
 So...I hope I haven't forgotten something, go ahead to the programming and exploration part of this post. First step - scan all of the needed packages.
@@ -17,6 +18,7 @@ library(animation)
 ```
 
 ```{r, eval=TRUE, echo=FALSE}
+library(knitr)
 opts_knit$set(root.dir = "C:\\Users\\Peter\\Downloads\\ProjektBD\\enernoc\\")
 ```
 
@@ -115,16 +117,23 @@ ggplot(data = datas, aes(date_time, value, group = type, colour = type)) +
 ```
 
 Fit vs residuals - heteroscedasticity - non constant and nonnormal residuals (assumptions).
-```{r}
+```{r, echo=FALSE}
 gg <- ggplot(data = data.table(Fitted_values = lm_m_1$fitted.values, Residuals = lm_m_1$residuals),
        aes(Fitted_values, Residuals)) +
-  geom_point(size = 1.7) +
+  geom_point(size = 1.5) +
   geom_smooth() +
-  geom_hline(yintercept = 0, color = "red", size = 1) +
+  geom_hline(yintercept = 0, color = "red", size = 0.8) +
   labs(title = "Fitted vs Residuals")
-
+library(webshot)
 plt <- htmltools::tagList()
 plt <- as.widget(ggplotly(gg))
+
+# p <- plotly(username = "PetoLau", key = "g0opxjqh1d")
+# p$ggplotly(gg)
+```
+
+```{r, plotly=TRUE}
 plt
 ```
+
 
