--- a/_rmd/2016-11-28-Forecast-double-seasonal-time-series-with-multiple-linear-regression-in-R.Rmd
+++ b/_rmd/2016-11-28-Forecast-double-seasonal-time-series-with-multiple-linear-regression-in-R.Rmd
@@ -1,6 +1,9 @@
 ---
 layout: post
-title: Forecast double seasonal time series | with multiple linear regression in R
+title:  |
+        | Forecast double seasonal time series
+        | with multiple linear regression in R
+        
 author: Peter Laurinec
 published: false
 status: process
