--- a/_rmd/2016-11-28-Forecast-double-seasonal-time-series-with-multiple-linear-regression-in-R.Rmd
+++ b/_rmd/2016-11-28-Forecast-double-seasonal-time-series-with-multiple-linear-regression-in-R.Rmd
@@ -56,7 +56,7 @@ An interesting fact is that the consumption of the industry *Food Sales & Storag
 The aim of the multiple linear regression is to model dependent variable (output) by independent variables (inputs). Another target can be to analyze influence (correlation) of independent variables to the dependent variable. Like in the previous post, we want to forecast consumption one week ahead, so regression model must be constructed that way. Variables (inputs) will be of two types of seasonal dummy variables - daily ($d_1, \dots, d_{48}$) and weekly ($w_1, \dots, w_6$). In the case of the daily variable, there will be $1$, when the consumption during the day will be measured at the particular time, otherwise $0$. In the case of the week variable there will be $1$, when the consumption is measured at the particular day of the week, otherwise $0$.
 
 The regression model can be formally written as:
-$$y_i = \beta_1d_{i1} + \beta_2d_{i2} + \dots + \beta_{48}d_{i48} + \beta_{49}w_{i1} + \dots + \beta_{54}w_{i6} + \varepsilon_i,$$
+<span>$$y_i = \beta_1d_{i1} + \beta_2d_{i2} + \dots + \beta_{48}d_{i48} + \beta_{49}w_{i1} + \dots + \beta_{54}w_{i6} + \varepsilon_i,$$</span>
 where $y_i$ is the electricity consumption at the time $i$, where $i = 1, \dots, N$. $\beta_1, \dots, \beta_{54}$ are regression coefficients, which we want to estimate. $d_1, \dots, d_{48}$ and $w_1, \dots, w_6$ are dummy independent variables. $\varepsilon_i$ is a random error. Assumption for the errors are that they are independently identical distributed (i.i.d.) with distribution $\varepsilon \sim N(0,~\sigma^2)$.
 
 Estimation of regression coefficients is done by ordinary least squares (OLS). So if we wrote our model as:
